@@ -4,27 +4,24 @@ package app.modules;
 
 /**
  * Represents a category for organizing expenditures
+ * TODO: Implement the complete Category class
  */
 public class Category {
-    // done
+
     private String id;
     private String name;
     private String description;
     private String color; // for UI purposes
     
+    
 
-    /**
-     * Constructor for Category
+     public Category(String id, String name, String description, String color) {
 
-     */
-    public Category(String id, String name, String description, String color) {
-       
         this.id = id;
         this.name = name;
         this.description = description;
         this.color = color;
     }
-    
     
     /**
      * Get category ID
@@ -34,63 +31,28 @@ public class Category {
         return id;
     }
     
-    /**
-     
-     * @return category name
-     */
-    public String getName() {
-      
-        return name;
-    }
-
-
-    /**
-     
-     * @return category name
-     */
-    public String getDescription() {
-      
-        return description;
-    }
-
+    
     /**
      * Get category name
      * @return category name
      */
-    public String getColor() {
-        return color;
+    public String getName() {
+        return name;
     }
-    
+
     /**
      * Validate category data
      * @return true if valid, false otherwise
      */
     public boolean isValid() {
-        
-        return id != null && !id.isBlank()
-            && description != null && !description.isBlank()
-            && name != null && name.isBlank()
-            && color != null;
+
+        return id != null && !id.trim().isEmpty() &&
+               name != null && !name.trim().isEmpty() &&
+               description != null && !description.trim().isEmpty() &&
+               color != null && !color.trim().isEmpty();
     }
     
-    // Setters for each field
-    public void setId(String id) {
-        this.id = id;
-    }
-
-
-    public void setName(String name) {
-        this.name = name;
-    }
-
-    public void setDescription(String description) {
-        this.description = description;
-    }
-
-    public void setColor(String color) {
-        this.color = color;
-    }
-
+    // done
     @Override
     public String toString() {
         return "Category{" +
@@ -100,7 +62,4 @@ public class Category {
                 ", color='" + color + '\'' +
                 '}';
     }
-    
-    
-    
 }
